fix white space

--- a/wp-content/themes/giccanada/src/scss/news.scss
+++ b/wp-content/themes/giccanada/src/scss/news.scss
@@ -11,6 +11,8 @@ $image-dir: '../images/';
   margin-top: 80px;
   margin-bottom: 60px;
   color: #ff9500;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .news-gi-image {
